Changelog for Miosix np embedded OS

v1.59

v1.58
- Added new board stm32vldiscovery
- Fixed a bug in the syscall code to handle static constructors. Despite the
  gcc documentation said that a __guard was 8 bytes, it is actually only 4
- Changing linker scripts to be compatble with the way GCC handles
  .bss with C programs
- Added _times_r in syscalls.cpp to make clock() in time.h work
- Added exception thread safety test to testsuite.
- Added class ExceptionHandlingData that keeps a per-thread data structure
  used to make C++ exceptions thead safe.
- Updated gcc patches, newlib patches and gcc build scripts. Now as far as
  I know, every bit of gcc, newlib and libstdc++ is fully threadsafe, finally!
  (Except the _Reent struct that will be fixed later)
- Fixed a bug in pthread_once(), optimized __cxa_guard_* code.
- Made __register_exitproc() and __call_exitprocs() two new syscalls, to allow
  a future implementation of atexit support.
- Added support for pthread_once, also added new patch to newlib to reduce the
  size of pthread_once_t from 8 bytes to 2 bytes
- Added __cxa_guard_acquire(), __cxa_guard_release() and __cxa_guard_abort()
  to syscalls.cpp. These override the default ones in libstdc++ and provide
  a miosix-aware implementation that can guarantee thread safe initialization
  of static objects. Also, they don't pull in exception support unlike those
  in libstdc++
- Fixed a bug in the control based scheduler that caused sporadic crashes
- Reduced STACK_DEFAULT_FOR_PTHREAD to 2048 bytes, and STACK_MIN to 256 bytes.
- Added tests in testsuite for FastMutex, helped catch one bug
- Refactored code in Mutex and CondotionVariable
- Implement ConditionVariable support for FastMutex
- Breaking change: the Lock and Unlock classes have been templatized to
  work both with Mutex and FastMutex. Existing code Needs to be upgraded
  specifying the template parameter. For example, Lock l(m); becomes
  Lock<Mutex> l(m); or Lock<FastMutex> l(m);